--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <title> Sistah Space </title>
+  <title > Sistah Space </title>
 
 
 
@@ -70,7 +70,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
-          <li><button class="leave"><a href="#"> QUICKLY LEAVE THIS WEBSITE </a></button></li>
+          <li><button class="leave"><a href= "#"> QUICKLY LEAVE THIS WEBSITE </a></button></li>
         
         </ul>
         
@@ -81,8 +81,8 @@
 
   </div> <!--End Container -->
 </div> <!--end navbar-->
-</div>
 
+</div>
 
 
 <!--
@@ -176,6 +176,9 @@
   </div>
   <!--  </div> -->
 </div>
+
+
+
 
 </br>
 <div class = "container">
@@ -316,11 +319,11 @@
       <div class="row">
         <div class="col-sm-4 m-b-lg">
           <div class="panel panel-default panel-profile m-b-0">
-            <div class="panel-heading"></div>
+            <div class="panel-heading green"></div>
             <div class="panel-body text-center">
               <img class="panel-profile-img" src="">
               <h5 class="panel-title">Shopping</h5>
-              <p class="m-b">Star trek flow so they klingon me. I wrote this here code. Two times.</p>
+              <p class="m-b">Visit our shop to see what we have in store to fundraise for Sistah Space. </p>
               <a href="//github.com/fat" target="_blank" class="btn btn-primary-outline btn-sm m-b">
                 <span class="icon icon-add-user"></span> Find out more...
               </a>
@@ -329,11 +332,11 @@
         </div>
         <div class="col-sm-4 m-b-lg">
           <div class="panel panel-default panel-profile m-b-0">
-            <div class="panel-heading" style="background-image: url();"></div>
+            <div class="panel-heading yellow" ></div>
             <div class="panel-body text-center">
               <img class="panel-profile-img" src="">
               <h5 class="panel-title">Volunteering</h5>
-              <p class="m-b">Design at GitHub. Creator of Bootstrap. Previously at Twitter. Huge nerd.</p>
+              <p class="m-b">Have you got skills that you could contribute and a bit of spare time? Check our volunteering opportunities.</p>
               <a href="//github.com/mdo" target="_blank" class="btn btn-primary-outline btn-sm m-b">
                 <span class="icon icon-add-user"></span> Find out more...
               </a>
@@ -342,11 +345,11 @@
         </div>
         <div class="col-sm-4 m-b-lg">
           <div class="panel panel-default panel-profile m-b-0">
-            <div class="panel-heading" style="background-image: url();"></div>
+            <div class="panel-heading red" ></div>
             <div class="panel-body text-center">
               <img class="panel-profile-img" src="">
               <h5 class="panel-title">Donating</h5>
-              <p class="m-b">Burritos are my spirit animal. Previously Twitter and Medium. Burritos are my spirit animal. Previously Twitter and Medium Burritos are my spirit animal. Previously Twitter and Medium</p>
+              <p class="m-b">We are grateful for both money and in kind donations.</p>
               <a href="//github.com/dhg" target="_blank" class="btn btn-primary-outline btn-sm m-b">
                 <span class="icon icon-add-user"></span> Find out more...
               </a>
