--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
-          <li><button class="leave"><a href= "#"> QUICKLY LEAVE THIS WEBSITE </a></button></li>
+          <li><button class="leave"><a href= "http://youtube.co.uk"> QUICKLY LEAVE THIS WEBSITE </a></button></li>
         
         </ul>
         
@@ -128,39 +128,39 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/1.jpg" alt="picture">
+      <img src="images/1.JPG" alt="picture">
     </div>
 
     <div class="item">
-      <img src="images/2.jpg" alt="picture">
+      <img src="images/2.JPG" alt="picture">
     </div>
 
     <div class="item">
-      <img src="images/3.jpg" alt="picture">
+      <img src="images/3.JPG" alt="picture">
     </div>
 
     <div class="item">
-      <img src="images/4.jpg" alt="picture">
-    </div>
-
-
-    <div class="item">
-      <img src="images/5.jpg" alt="picture">
+      <img src="images/4.JPG" alt="picture">
     </div>
 
 
     <div class="item">
-      <img src="images/6.jpg" alt="picture">
+      <img src="images/5.JPG" alt="picture">
     </div>
 
 
     <div class="item">
-      <img src="images/7.jpg" alt="picture">
+      <img src="images/6.JPG" alt="picture">
     </div>
 
 
     <div class="item">
-      <img src="images/8.jpg" alt="picture">
+      <img src="images/7.JPG" alt="picture">
+    </div>
+
+
+    <div class="item">
+      <img src="images/8.JPG" alt="picture">
     </div>
 
 
