--- a/pages/donations.html
+++ b/pages/donations.html
@@ -1,1 +1,6 @@
-<p> hello</p>
+<h2>HOW YOU CAN HELP </h2>
+
+<p>Sistah Space started without any finances at all. It was very hard and we relied heavily on goodwill of our local community and the wider public. We could not have helped so many people without you and we are grateful for your support thus far.there are many ways you can continue to help DONATE Our Sistah Space service is one of a kind. Are essential for us to keep delivering the unique service that we offer that caters for African heritage women and girls. It will help us provide a safe venue where survivors/victims and their families can get the support they so desperately need. </p>
+
+
+<p>Your donations help us provide practical support and assist us with utility bills, travel, venue costs and providing essential refreshments for survivors and volunteers. Your donations also means we can organise residential visits and days out for those in need of respite. The money you help us raise means that we can continue to help those vulnerable victims that are often suffering in silence. </p>
