--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <span class="icon-bar"></span> 
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-
       </button>
       <a href="" class="navbar-brand">Sistah Space</a>
     </div> <!--Navbar header-->
@@ -86,26 +85,26 @@
 </div>
 
 
-<!--
-
-<div class="container">  
-  <div class="jumbotron">
 
 
-    <div class="jumbotron_text pull-right">
+<!-- <div class="container">  
+  <div class="jumbotron"> -->
+
+
+  <!--  <div class="jumbotron_text pull-right">  -->
       <h1> Sistah Space </h1>
 
       <div class="btn-group">
-        <a href=""  > <button class="btn-social" id="facebook">Facebook page</button></a>
-        <a href=""  > <button class="btn-social" id="youtube">  Youtube</button></a>
-        <a href=""  > <button class="btn-social" id="ebay"  > Ebay</button></a>
+        <a href=""  > <button class="btn-social" id="facebook">Facebook </button></a>
+        <a href=""  > <button class="btn-social" id="twitter">  Twitter</button></a>
+
 
       </div>
-    </div>
-  </div>
-</div>
+  <!--  </div> -->  
 
--->
+ <!-- </div>
+</div> -->
+
 
 
 
@@ -178,18 +177,18 @@
   <!--  </div> -->
 </div>
 
-
+ 
 
 
 </br>
 <div class = "container">
  <div class = "row">
 
-  <div class = "col-sm-12 green"> 
+  <div class = "col-sm-12 green main-quote"> 
 
-   <h4>Sistah Space is a community based initiative that supports African heritage women and girl vicitims of domestic and sexual abuse/violence.</h4>
+   <h1>Sistah Space is a community based initiative that supports African heritage women and girl vicitims of domestic and sexual abuse and violence.</h1> </br>
 
-   <h5> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls. </h5>
+   <h4> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls. </h4>
 
 
  </div>
