link to donations

--- a/pages/donations.html
+++ b/pages/donations.html
@@ -34,5 +34,8 @@
 
 <p>Your donations help us provide practical support and assist us with utility bills, travel, venue costs and providing essential refreshments for survivors and volunteers. Your donations also means we can organise residential visits and days out for those in need of respite. The money you help us raise means that we can continue to help those vulnerable victims that are often suffering in silence. </p>
 
+
+<a href = "http://uk.virginmoneygiving.com/charity-web/charity/displayCharityCampaignPage.action?charityCampaignUrl=sistahspace"> Virgin Money Giving - fundraising site </a>
+
 </body>
 </html>
