--- a/pages/donations.html
+++ b/pages/donations.html
@@ -1,1 +1,84 @@
-<p> hello</p>
+<!DOCTYPE html>
+
+<html>
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+ 
+
+  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500italic' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" type="text/css" href="..css/css.css"/>  
+  <title > Donate to support Sistah Space </title>
+
+
+
+</head>
+
+<body>
+	
+<body data-spy="scroll" data-target="#category">
+ <div class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
+   <div class="container">
+    <div class="navbar-header"> 
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="" class="navbar-brand"> LOGO here</a>
+    </div> <!--Navbar header-->
+
+
+    <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
+    <div class="collapse navbar-collapse" id="navbar-collapse">
+     <ul class="nav navbar-nav nav " >
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="pages/our_work.html">Our work</a></li>
+          <li><a href="pages/abuse.html">What is abuse</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Useful links</a></li>
+        </ul>
+        <li><a href="pages/help.html"> How we can help you </a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How you can help us <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="pages/shop.html"> Shop </a></li>
+            <li><a href="pages/donations.html"> Donate </a></li>
+            <li><a href="pages/volunteer.html"> Volunteer </a></li>
+          </ul>
+          <li><a href="pages/news.html">News</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        </ul>
+      </li>
+    </ul>
+  </div>
+  </div> <!--End Container -->
+   <button id="escape" class="escape">QUICKLY LEAVE THIS WEBSITE</button>
+  </div> 
+
+
+
+
+
+
+<h2>HOW YOU CAN HELP </h2>
+
+<p>Sistah Space started without any finances at all. It was very hard and we relied heavily on goodwill of our local community and the wider public. We could not have helped so many people without you and we are grateful for your support thus far.there are many ways you can continue to help DONATE Our Sistah Space service is one of a kind. Are essential for us to keep delivering the unique service that we offer that caters for African heritage women and girls. It will help us provide a safe venue where survivors/victims and their families can get the support they so desperately need. </p>
+
+
+<p>Your donations help us provide practical support and assist us with utility bills, travel, venue costs and providing essential refreshments for survivors and volunteers. Your donations also means we can organise residential visits and days out for those in need of respite. The money you help us raise means that we can continue to help those vulnerable victims that are often suffering in silence. </p>
+
+
+<a href = "http://uk.virginmoneygiving.com/charity-web/charity/displayCharityCampaignPage.action?charityCampaignUrl=sistahspace"> Virgin Money Giving - fundraising site </a>
+
+</body>
+</html>
