--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -1,1 +1,74 @@
-<p> hello> </p>
+<!DOCTYPE html>
+
+<html>
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+ 
+
+  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500italic' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <title > Volunteer at Sistah Space </title>
+
+
+
+</head>
+
+<body>
+	
+<body data-spy="scroll" data-target="#category">
+ <div class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
+   <div class="container">
+    <div class="navbar-header"> 
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="" class="navbar-brand"> LOGO here</a>
+    </div> <!--Navbar header-->
+
+
+    <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
+    <div class="collapse navbar-collapse" id="navbar-collapse">
+     <ul class="nav navbar-nav nav " >
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="pages/our_work.html">Our work</a></li>
+          <li><a href="pages/abuse.html">What is abuse</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Useful links</a></li>
+        </ul>
+        <li><a href="pages/help.html"> How we can help you </a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How you can help us <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="pages/shop.html"> Shop </a></li>
+            <li><a href="pages/donations.html"> Donate </a></li>
+            <li><a href="pages/volunteer.html"> Volunteer </a></li>
+          </ul>
+          <li><a href="pages/news.html">News</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        </ul>
+      </li>
+    </ul>
+  </div>
+  </div> <!--End Container -->
+   <button id="escape" class="escape">QUICKLY LEAVE THIS WEBSITE</button>
+  </div> 
+
+
+
+
+
+
+</body>
+</html>
