--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -68,38 +68,35 @@
 
 
 <div class = "container">
-
-
 <div class ="jumbotron">
 	<img sr="../images/1.JPG">
 </div>
 
+<h1>The history</h1>
+<p class="text-justify">
+Many UK born or raised African heritage people grew up at at time when only white men were teachers, headteachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. Any high profile jobs prodominalty done by white males. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.
 
-<p class="text-justify">Many UK born or raised African heritage people grew up at at time when only white men were , teachers, headteachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. Any high profile jobs prodominalty done by white males. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.
+The well known phrase, no blacks, no Irish, no dogs was in many windows in 1950s and 60s Britain. Many of the children of that time are now the adults of this time and although much has changed in terms of work opportunites, equality for all has not been achieved.
 
-The well known phrase, no blacks, no Irish, no dogs was in many windows in 1950's and 60's Britain. Many of the children of that time are now the adults of this time and although much has changed in terms of work opportunites, equality for all has not been achieved.
+In addition, there was not much support for any person suffering domestic abuse, it was very much considered a 'domestic' affair to be sorted out by the persons involved. This did not bode well for women in particular. African heritage women even less so.</p>
 
-In addition, there was not much support for any person suffering domestic abuse, it was very much considered a 'domestic' affair to be sorted out by the persons involved. This did not bode well for women in particular. African heritage women even less so.
 
-The repercussions of that era are still very much felt today, with many African heritage victims of abuse, extremely relunctant to report crime to the police or other agencies. The reasons given are many and include,
-
-Discrimination
-
-Not being taken seriously by police
-
-Not trusting Social Service will not blame them and take away their children
-
-Not wanting the African heritage man to be beaten or killed by police (a very real fear to this day. Although he might be considered abusive, the survivor still had concerns for their safety)
-
-Unresolved issues around displacement and slavery
-
-Services not understanding African and Caribbean culture, and therefore not suitable for African heritage survivors.
-
-Insufficient adequate resources or places that reflect their cultural heritage. </p>
+<p>The repercussions of that era are still very much felt today, with many African heritage victims of abuse, extremely relunctant to report crime to the police or other agencies. The reasons given are many and include:
+<ul>
+  <li>Discrimination </li>
+  <li>Not being taken seriously by police </li>
+  <li>Not trusting Social Service will not blame them and take away their children</li>
+  <li>Not wanting the African heritage man to be beaten or killed by police (a very real fear to this day. Although he might be considered abusive, the survivor still had concerns for their safety)</li>
+  <li>Unresolved issues around displacement and slavery.</li>
+  <li>Services not understanding African and Caribbean culture, and therefore not suitable for African heritage survivors.</li>
+  <li>Insufficient adequate resources or places that reflect their cultural heritage.</li>
+</ul>
+</p>
 
 
 <p>
-<h1>A Difficult Conversation. </h1>
+
+<h1>A Difficult Conversation </h1>
 
 <h3>Why do we need a domestic abuse organisation specifically for African heritage people? </h3>
 
@@ -110,8 +107,8 @@ Insufficient adequate resources or places that reflect their cultural heritage. 
 <p>No doubt those organisations mean well, but how can you assist a people, who's history and culture you do not understand and who some (let's speak honestly) don't have a great deal of respect for? We have seen some 'specialist' DV organisation receive funding because they claim to help African and Caribbean people when they clearly don't. Have you ever walked into an organisation for help and walked out because you can 'smell' the contempt they have for you? Or have you ever experienced humiliation when police won't take you seriously because you don't have a 'red mark' where you were hit in the face, despite your very dark skin? Do you know anything at all about Female Genital Mutilation (FGM)? Do you know anything about the Rastafarian community? No? Well we do. </p>
 
 <p>This statement no doubt is hard for some people to read, understand or believe. Unfortunately, it does not make it any less true. If it is difficult for you to hear, imagine how difficult it is to live it. </p>
-
-<p>Our solution to this is to create our own Sistah Space, a place where African heritage people can see themselves reflected. Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than there white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
+<h2>Our solution</h1>
+<p>To create our own Sistah Space, a place where African heritage people can see themselves reflected. Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than there white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
 
 <p>Another very important thing is, that we are afraid of what will happen to the African heritage man if we report him. Just because we might be experiencing turbulance in the relationship, it doesn't mean we want him hurt, or dead.We only want the abuse to stop.  The history of black men and the police is not a good one. We fear reporting our brotha to the police. </p>
 
@@ -131,9 +128,9 @@ Our skin also takes some special treatment and care. After bathing, we must appl
 
 What has this to do with domestic abuse? Well plenty, if you don't know this basic thing about African heritage woman, what do you know? How can you cater for us when you don't know the first thing about us.
 
-How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge, for example, where she has not had time to go through the routine that allows us to be presentable. To an area where the products and items she needs to do this necessary routine are not available? Where the very nice people at the refuge/centre/police station/rape centre/hospital.... don't understand why she can't present yet, because she does not have the resources she needs to fix her hair and the particular oils and creams to manage her hair and skin. This is additional trauma on top of what happened to her.
+How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge, for example, where she has not had time to go through the routine that allows us to be presentable. To an area where the products and items she needs to do this necessary routine are not available? Where the very nice people at the refuge/centre/police station/rape centre/hospital.... don't understand why she can't present yet, because she does not have the resources she needs to fix her hair and the particular oils and creams to manage her hair and skin. This is additional trauma on top of what happened to her.</p>
 
-Can other organisations still deal with the fact that many African heritage people do not have faith in the 'system' because of many reasons too many to mention, but including the history of police brutality, slavery and all the other things 'we don't like to talk about'. Many of us are the descendent of those who came here to do the menial jobs that other's didn't want to do. Our parents who heard the familiar words and saw in many a window, 'No Irish, no blacks, no dogs'.
+<p>Can other organisations still deal with the fact that many African heritage people do not have faith in the 'system' because of many reasons too many to mention, but including the history of police brutality, slavery and all the other things 'we don't like to talk about'. Many of us are the descendent of those who came here to do the menial jobs that other's didn't want to do. Our parents who heard the familiar words and saw in many a window, 'No Irish, no blacks, no dogs'.
 
 We remain victims of blatant racism and unconscious bias in institutions where racism is inherent. We do know that things are changing for the better, but in the meantime, people are dying and still refusing to report to institutions because of fear.
 
