--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
     <div class="item">
       <img src="images/2.JPG" alt="picture">
+      <p> Hello </p>
     </div>
 
     <div class="item">
