--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 <div class="row">
 
-  <div class ="col-sm-6 " id ="our-journey">
+  <div class ="col-sm-6 text-justify" id ="our-journey">
 
 
 
