--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
-     <ul class="nav navbar-nav nav " >
+     <ul class="nav navbar-nav nav navbar-static-top" >
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -101,24 +101,36 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/1.JPG" alt="picture"> <p class = "hello"> hello</p>
+      <img src="images/1.JPG" alt="picture"> 
+      <div class = "carousel-caption yellow"> 
+        <h2>Sistah Space is a community based initiative that supports African heritage women and girls. </h2> 
+      </div>
     </div>
 
     <div class="item">
       <img src="images/2.JPG" alt="picture">
-      <p> Hello </p>
+      <div class = "carousel-caption">
+        <h2> We provide advice and supoprt to victims of domestic and sexual abuse and violence. </h2>
+      </div>    
     </div>
 
     <div class="item">
       <img src="images/3.JPG" alt="picture">
+      <div class = "carousel-caption">
+        <h2> We work with our local community and services to raise awareness of domestic and sexual abuse.  </h2>
+      </div>    
     </div>
 
     <div class="item">
-      <img src="images/4.JPG" alt="picture">
+      <img src="images/4.JPG" alt="picture">  
     </div>
+    
 
     <div class="item">
       <img src="images/5.JPG" alt="picture">
+      <div class = "carousel-caption">
+        <h2> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls. </h2>
+      </div>  
     </div>
 
     <div class="item">
@@ -151,22 +163,11 @@
 
 </br>
 <div class = "container">
- <div class = "row">
-
-  <div class = "col-sm-12 green main-quote"> 
-
-   <h1>Sistah Space is a community based initiative that supports African heritage women and girl vicitims of domestic and sexual abuse and violence.</h1> </br>
-
-   <h4> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls. </h4>
-
-
- </div>
-</div>  
 
 
 <div class="row">
 
-  <div class ="col-sm-6 " id ="our-journey">
+  <div class ="col-sm-6 green" id ="our-journey">
 
 
 
