--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -3,7 +3,7 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
- 
+
 
   <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500italic' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
   <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+   <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <title > What is abuse? </title>
 
 
@@ -21,9 +21,9 @@
 <body data-spy="scroll" data-target="#category">
  <div class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
    <div class="container">
-    <div class="navbar-header"> 
+    <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
@@ -53,14 +53,14 @@
           <li><a href="pages/news.html">News</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
         </ul>
       </li>
     </ul>
   </div>
   </div> <!--End Container -->
    <button id="escape" class="escape">QUICKLY LEAVE THIS WEBSITE</button>
-  </div> 
+  </div>
 
 
 
@@ -69,6 +69,7 @@
 
 
 <body>
+  <div class="container">
 
 <h2>What is abuse? </h2>
 
@@ -83,7 +84,7 @@ Often there are warning signs, but sometimes there are none.
 	<li>When a woman decides to leave the relationship</li>
 	<li>With each pregnancy or child, the situation can become more intense</li>
 	<li>When he doesn't want you to main a relationship with famil or friends</li>
-	<li>If he has a history of abusive behaviour</li>	
+	<li>If he has a history of abusive behaviour</li>
 	<li>When his mood switches from really nice to really nasty suddenly and without warning or reason</li>
 	<li>If he controls the finances and pretty much everything, including what you wear and where you go.</li>
 	<li>He phones you constantly and tries to monitor your movements</li>
@@ -103,6 +104,7 @@ Often there are warning signs, but sometimes there are none.
 	<li>Threatening to reveal something personal about you.</li>
 	<li>Threatening to or harming a family member (children, parent)</li>
 </ul>
+</div>
 
 </body>
 </html>
