home page change
change to copy

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
       <h2 class = "text-justify">Why Sistah Space?</h2>
 
-      <p class="text-justify">The viscous <a href=""http://www.bbc.co.uk/news/uk-england-london-36562028"> murder </a> of Valerie Forde and her 22-month old daughter by Valerie's ex-partner and the baby's father, in 2014, was the catalyst for Sistah Space.
+      <p class="text-justify">The vicious <a href=""http://www.bbc.co.uk/news/uk-england-london-36562028"> murder </a> of Valerie Forde and her 22-month old daughter by Valerie's ex-partner and the baby's father, in 2014, was the catalyst for Sistah Space.
  </p>
 
       <p class="text-justify"> This tragic event showed us that there was a clear need for an organisation to tackle domestic abuse in African heritage families. </p>
