--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="pages/our_work.html">Our work</a></li>
+            <li><a href="pages/our_team.html">Our team</a></li>
             <li><a href="pages/abuse.html">What is abuse?</a></li>
-            <li><a href="#">Page 3</a></li>
             <li><a href="#">Page 4</a></li>
           </ul>
         </li>      
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
             <ul class = "dropdown-menu">  
-              <li><a href="#"> Advice </a></li>
-              <li><a href="#"> Sistah Space Sanctuary </a></li>
+              <li><a href="pages/advice.html"> Advice </a></li>
+              <li><a href="pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
               <li><a href="#"> Page 3 </a></li>
             </ul>
           </li>
@@ -50,17 +50,17 @@
 
 
         <li class="dropdown">
-          <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
-              <li><a href="#"> Donate </a></li>
-              <li><a href="#"> Volunteer </a></li>
-              <li><a href="#"> Shop </a></li>
+              <li><a href="pages/donations.html"> Donate </a></li>
+              <li><a href="pages/volunteer.html"> Volunteer </a></li>
+              <li><a href="pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-        <li><a href=pages/news.html>News</a></li>
+        <li><a href="pages/news.html">News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        <li><a href="pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
       </ul>
     </div>
   </div>
@@ -69,7 +69,7 @@
 
 
 
-
+<div class = "jumbotron">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   
   <button class="escape" id="escape">Quickly leave this page</button>
@@ -151,6 +151,7 @@
   </div>
   <!--  </div> -->
 </div>
+</div>
 
 <br>
 <div class = "container container-main">
@@ -164,36 +165,9 @@
 
       <p class="text-justify">With the unwaivering practical and moral support of Hackney Council for Voluntary Services (HCVS), in particular Jake Ferguson (CEO of HCVS) and Kristine Wellington (Safeguarding, HCVS), we were able to secure a property (short lease) and Sistah Space was born. With no funding and no pay, Ngozi depended on the community and friends to keep the Sistah Space running. The community have been activily involved in developing Sistah Space and were largely responsible for furnishing the Sistah Space centre.</p>
 
-<<<<<<< HEAD
-</br>
-<div class = "container">
- <div class = "row">
-
-  <div class = "col-sm-12 green main-quote"> 
-
-   <h1>Sistah Space is a community based initiative that supports African heritage women and girl vicitims of domestic and sexual abuse and violence.</h1> </br>
-
-   <h4> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls. </h4>
+</div>
 
 
- </div>
-</div>  
-
-
-<div class="row">
-
-  <div class ="col-sm-6 text-justify" id ="our-journey">
-
-
-
-
-    <h2 >Our Journey</h2>
-
-    <p>The 2014 vicious murder of Valerie Forde and her 22 month old baby girl by Valerie's ex-partner (and baby J's father) became the catalyst for Sistah Space. We had realised that there was a need for a domestic abuse service that catered for the specific needs of African heritage families, but also a 'space' that reflected the African heritage service users. </p>
-=======
-      <p class="text-justify">Sistah Space are proud members of the Hackney Women's Haven (HWH) consortium that applied to the Big Lottery for funding. This year May 2016 Hackney HWH learned that their application was successful. From October 2016, the Sistah Space will have a paid member of staff for 3 days a week.</p>
-    </div>
->>>>>>> origin/master
 
     <div class = "col-sm-6 picture-holder">
 
@@ -205,13 +179,13 @@
 
   <div class = "row">
     <div class ="col-sm-6 ">
-      <h2> Our Team </h2>
+      <h2> Social media stream </h2>
 
     </div>
 
     <div class ="col-sm-6">
 
-      Some content
+   <h2>   Some content </h2>
 
       </div>
     </div>
