--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -1,74 +1,85 @@
 <!DOCTYPE html>
 
+<html>
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-
-
-  <link href='https://fonts.googleapis.com/css?family=Crimson+Text:400,400italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:400,500italic' rel='stylesheet' type='text/css'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-   <link rel="stylesheet" type="text/css" href="../css/css.css"/>
-  <title > What is abuse? </title>
 
-
-
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <title > Sistah Space </title>
+  <!-- http://www.favicon-generator.org/ -->
 </head>
 
-<body data-spy="scroll" data-target="#category">
- <div class="navbar navbar-inverse navbar-fixed-top" id="my-navbar">
-   <div class="container">
-    <div class="navbar-header">
+<body>
+ <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
+  <div class="container"> 
+    <div class="navbar-header"> 
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
       <a href="" class="navbar-brand"> LOGO here</a>
-    </div> <!--Navbar header-->
+    </div>
 
-
-    <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
-     <ul class="nav navbar-nav nav " >
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="pages/our_work.html">Our work</a></li>
-          <li><a href="pages/abuse.html">What is abuse</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Useful links</a></li>
-        </ul>
-        <li><a href="pages/help.html"> How we can help you </a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How you can help us <span class="caret"></span></a>
+      <ul class="nav navbar-nav" >
+        <li class = "dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="pages/shop.html"> Shop </a></li>
-            <li><a href="pages/donations.html"> Donate </a></li>
-            <li><a href="pages/volunteer.html"> Volunteer </a></li>
+            <li><a href="../pages/our_work.html">Our work</a></li>
+            <li><a href="../pages/abuse.html">What is abuse?</a></li>
+            <li><a href="#">Page 3</a></li>
+            <li><a href="#">Page 4</a></li>
           </ul>
-          <li><a href="pages/news.html">News</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
-        </ul>
-      </li>
-    </ul>
+        </li>      
+        <li class = "dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
+            <ul class = "dropdown-menu">  
+              <li><a href="#"> Advice </a></li>
+              <li><a href="#"> Sistah Space Sanctuary </a></li>
+              <li><a href="#"> Page 3 </a></li>
+            </ul>
+          </li>
+
+
+
+        <li class="dropdown">
+          <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
+            <ul class = "dropdown-menu">
+              <li><a href="#"> Donate </a></li>
+              <li><a href="#"> Volunteer </a></li>
+              <li><a href="#"> Shop </a></li>
+              </ul>
+          </li>
+        <li><a href=pages/news.html>News</a></li>
+      </ul>  
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+      </ul>
+    </div>
   </div>
-  </div> <!--End Container -->
-   <button id="escape" class="escape">QUICKLY LEAVE THIS WEBSITE</button>
+</div>
+</div>
+
+<div class = "container">
+ <button class="escape" id="escape">Quickly leave this page</button>
+  <div class="social">
+    
+    <a href=""  > <button class="btn-social" id="facebook">Facebook </button></a>
+    <a href=""  > <button class="btn-social" id="twitter">  Twitter</button></a>
   </div>
 
+  <p> Content </p>  
+</div>
 
+<
 
-
-
-
-
-<body>
   <div class="container">
 
 <h2>What is abuse? </h2>
@@ -105,6 +116,30 @@ Often there are warning signs, but sometimes there are none.
 	<li>Threatening to or harming a family member (children, parent)</li>
 </ul>
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <p class> Sistah Space is...</p>
+    <p> next line </p>
+    <p> next line</p>
+    <p> next line</p>
+  </div>
+</footer>
+
+
+<script>
+  (function() {
+    function onEscapeClick() {
+      document.write('');
+      window.location = "http://youtube.co.uk"
+    }
+
+    document.getElementById('escape').addEventListener('click', onEscapeClick)
+  }())
+
+</script>
+
+
 
 </body>
 </html>
