home page changes
copy changes to ‘Why Sistah Space’

--- a/index.html
+++ b/index.html
@@ -162,12 +162,11 @@
 
       <h2 class = "text-justify">Why Sistah Space?</h2>
 
-      <p class="text-justify">The vicious <a href=""http://www.bbc.co.uk/news/uk-england-london-36562028"> murder </a> of Valerie Forde and her 22-month old daughter by Valerie's ex-partner and the baby's father, in 2014, was the catalyst for Sistah Space.
+      <p class="text-justify">Valerie Forde and her 22-month old daughter were viciously <a href=""http://www.bbc.co.uk/news/uk-england-london-36562028"> murdered </a> by Valerie's ex-partner (also the baby's father) in 2014. This tragic event, which highlighted the need for an organisation to tackle domestic abuse in African heritage families, was the catalyst for Sistah Space.
+
  </p>
 
-      <p class="text-justify"> This tragic event showed us that there was a clear need for an organisation to tackle domestic abuse in African heritage families. </p>
-
-    <p class="text-justify">  Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families, which enables it to provide a 'safe' space for anyone who is concerned about domestic abuse.
+    <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. This means it can provide a 'safe' space for anyone who is concerned about domestic abuse. </p>
 
 <h3 class="text-justify inner-padding"> How we can help </h3>
   <p class="text-justify"> We can <a href="x"> help you </a> or explain what to look out for if you are worried about someone else.</p>
