--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -72,16 +72,55 @@
 	<img sr="../images/1.JPG">
 </div>
 
+<h2> A domestic abuse organisation for African heritage people</h2>
+<h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple - the current system does not understand, or cater for the needs of African heritage people. </h4>
+<p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without an understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
+
+<p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
+
+
+<p class="text-justify">This is no doubt hard for some people to read, understand or believe. Unfortunately, it does not make it any less true. If it's difficult for you to hear, imagine how difficult it is to live it. </p>
+<h2>Our solution</h2>
+<p class="text-justify"> To create our own Sistah Space, a place where African heritage people can see themselves reflected. Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than their white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
+
+
+
+<h2>Why Sistah Space is best placed to do this</h2>
+
+<p class="text-justify">Ngozi gives this example to those who do not understand why a specialist organisation like Sistah Space is needed. </p>
+
+<p class="text-justify"> "I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family." </p>
+
+<p class="text-justify">Another very important thing is that we’re afraid of what will happen to the perpetrator if we report him. Just because we’re experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police. </p>
+
+<h3>We understand the day-to-day needs of African heritage women</h3>
+<p class="text-justify">When a black woman washes her hair, it not usually a 10 minute 'wash and go' process that you might find with more manageable European or Asian hair types. Generally speaking, our natural hair texture means that it takes an extended time to wash and dry. If it is unprocessed, our hair will shrink and revert and will have to be plaited, combed or otherwise styled before we can go out. If it’s processed or weave, it still has to undergo some type of process before we can 'present'. The wash plait and style process can take hours and usually takes careful planning. </p>
+
+<p class="text-justify">Our skin also takes special treatment and care. After bathing, we must apply special creams or oils to our skins to avoid the dry and 'ashy’ appearance. These are day-to- day routines for us, but most people outside our culture don't appear to know this.</p>
+
+<p class="text-justify">What has this to do with domestic abuse? Well, plenty. If you don't know this basic fact about African heritage woman, what do you know? How can you cater for us when you don't know the first thing about us?</p>
+
+<p class="text-justify">How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge. Where she has not had time to go through the routine that allows her to be presentable and doesn’t have access to the products and items she needs to manage her hair and skin. Where the very nice people at the refuge/centre/police station/rape centre/hospital don't understand why she can't present yet. </p>
+
+<p class="text-justify"> This is additional trauma on top of what happened to her.</p>
+
+<h3>We understand why there is a lack of faith in the system </h3>
+
+<p class="text-justify">Can other organisations deal with the fact that many African heritage people do not have faith in the 'system' for a multitude of reasons including the history of police brutality, slavery and all the other things 'we don't like to talk about'. Many of us are the descendents of those who came here to do the menial jobs that other's didn't want to do. Our parents heard the familiar words and saw in many a window, 'No Irish, No blacks, No dogs'.</p>
+
+<p class="text-justify">We remain victims of blatant racism and unconscious bias in institutions where racism is inherent. We do know that things are changing for the better, but in the meantime, people are dying and still refusing to report to institutions because of fear.</p>
+
+
+
 <h1>The history</h1>
-<p class="text-justify">
-Many UK born or raised African heritage people grew up at at time when only white men were teachers, headteachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. Any high profile jobs prodominalty done by white males. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.
+<p class="text-justify">Many UK born or raised African heritage people grew up in time when only white men were teachers, head teachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. All high profile jobs were predominantly done by white men. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.</p>
 
-The well known phrase, no blacks, no Irish, no dogs was in many windows in 1950s and 60s Britain. Many of the children of that time are now the adults of this time and although much has changed in terms of work opportunites, equality for all has not been achieved.
+<p class="text-justify">The well-known phrase, ‘No blacks, No Irish, No dogs’ was in many windows in 1950/60s Britain. Many of the children of that time are now adults and although much has changed in terms of work opportunities, equality for all has not been achieved.</p>
 
-In addition, there was not much support for any person suffering domestic abuse, it was very much considered a 'domestic' affair to be sorted out by the persons involved. This did not bode well for women in particular. African heritage women even less so.</p>
+<p class="text-justify">Back then, in addition to this, there was not much support for any person suffering domestic abuse. It was very much considered a 'domestic' affair to be sorted out by the people involved. This did not bode well for women in particular, African heritage women even less so.</p>
 
+<p class="text-justify">The repercussions of that era are still very much felt today, with many African heritage victims of abuse, extremely reluctant to report crime to the police or other agencies. The reasons given are many and include:</p>
 
-<p>The repercussions of that era are still very much felt today, with many African heritage victims of abuse, extremely relunctant to report crime to the police or other agencies. The reasons given are many and include:
 <ul>
   <li>Discrimination </li>
   <li>Not being taken seriously by police </li>
@@ -94,49 +133,7 @@ In addition, there was not much support for any person suffering domestic abuse,
 </p>
 
 
-<p>
 
-<h1>A Difficult Conversation </h1>
-
-<h3>Why do we need a domestic abuse organisation specifically for African heritage people? </h3>
-
-<h4>The answer is very simple. It is because the current system does not understand, or cater for the needs of African heritage people. </h4>
-
-<p>There are so many UK domestic abuse/violence organisation that cater for the general needs of all women. There is an understanding of 'Honour' Based Violence and other problems that are specific to a people or culture, but we have found that many such organisation claim to assist and support African and Caribbean survivors of domestic abuse, but unfortunately this is not our experience. <p>
-
-<p>No doubt those organisations mean well, but how can you assist a people, who's history and culture you do not understand and who some (let's speak honestly) don't have a great deal of respect for? We have seen some 'specialist' DV organisation receive funding because they claim to help African and Caribbean people when they clearly don't. Have you ever walked into an organisation for help and walked out because you can 'smell' the contempt they have for you? Or have you ever experienced humiliation when police won't take you seriously because you don't have a 'red mark' where you were hit in the face, despite your very dark skin? Do you know anything at all about Female Genital Mutilation (FGM)? Do you know anything about the Rastafarian community? No? Well we do. </p>
-
-<p>This statement no doubt is hard for some people to read, understand or believe. Unfortunately, it does not make it any less true. If it is difficult for you to hear, imagine how difficult it is to live it. </p>
-<h2>Our solution</h1>
-<p>To create our own Sistah Space, a place where African heritage people can see themselves reflected. Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than there white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
-
-<p>Another very important thing is, that we are afraid of what will happen to the African heritage man if we report him. Just because we might be experiencing turbulance in the relationship, it doesn't mean we want him hurt, or dead.We only want the abuse to stop.  The history of black men and the police is not a good one. We fear reporting our brotha to the police. </p>
-
-
-<p>Ngozi often gives an example to those who still do not see why a specialist organisation such as Sistah Space is needed. </p>
-
-<p>I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the Grassroots community. This is because there is some similarity in the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not very much in favour of that. We are often taught from young keep personal things private and contained within the family. </p>
-
-
-
-<p>Another reason why we need a centre that understands and caters for African heirtage people.
-When a black woman washes her hair, it not usually a ten minute 'wash and go' process that you might find with European or Asian hair types. Generally speaking, our natural hair texture means that it takes an extended time to wash and dry. If it is unprocessed, our hair will shrink and revert and will have to be plaited, combed or otherwise styled before we can even exit our front doors. If it processed, weave or other, it still has to undergo some type of process before we can 'present'.  The wash plait and style process can take hours and usually takes careful planning. </p>
-
-In contrast, most other cultures have straight or otherwise more easily manageable hair, most of us African heritage women have never experienced being able to wash, dry and go in 10-20 mins.
-
-Our skin also takes some special treatment and care. After bathing, we must apply special creams or oils to our skins to avoid the dry and 'ashy appearance. These are day to day routines for us, but most people outside our culture don't appear to know this.
-
-What has this to do with domestic abuse? Well plenty, if you don't know this basic thing about African heritage woman, what do you know? How can you cater for us when you don't know the first thing about us.
-
-How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge, for example, where she has not had time to go through the routine that allows us to be presentable. To an area where the products and items she needs to do this necessary routine are not available? Where the very nice people at the refuge/centre/police station/rape centre/hospital.... don't understand why she can't present yet, because she does not have the resources she needs to fix her hair and the particular oils and creams to manage her hair and skin. This is additional trauma on top of what happened to her.</p>
-
-<p>Can other organisations still deal with the fact that many African heritage people do not have faith in the 'system' because of many reasons too many to mention, but including the history of police brutality, slavery and all the other things 'we don't like to talk about'. Many of us are the descendent of those who came here to do the menial jobs that other's didn't want to do. Our parents who heard the familiar words and saw in many a window, 'No Irish, no blacks, no dogs'.
-
-We remain victims of blatant racism and unconscious bias in institutions where racism is inherent. We do know that things are changing for the better, but in the meantime, people are dying and still refusing to report to institutions because of fear.
-
-
-
- </p>
 </div>
 
 </body>
