--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
 
  </p>
 
-    <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. This means it can provide a 'safe' space for anyone who is concerned about domestic abuse. </p>
+    <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. This means we can provide a 'safe' space for anyone who is concerned about domestic abuse. </p>
+     <p> Find out more <a href="x"> abou us. </a> </p>
 
 <h3 class="text-justify inner-padding"> How we can help </h3>
   <p class="text-justify"> We can <a href="x"> help you </a> or explain what to look out for if you are worried about someone else.</p>
