--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -72,8 +72,12 @@
 	<img sr="../images/1.JPG">
 </div>
 
-<h2> A domestic abuse organisation for African heritage people</h2>
-<h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple - the current system does not understand, or cater for the needs of African heritage people. </h4>
+<div class="standout">
+<h1> A domestic abuse organisation for African heritage people</h1>
+<h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple. The current system does not understand or cater for the needs of this community. </h4>
+</div>
+
+<h2> The problem</h2>
 <p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without an understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
 
 <p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
@@ -91,16 +95,16 @@
 
 <p class="text-justify"> "I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family." </p>
 
-<p class="text-justify">Another very important thing is that we’re afraid of what will happen to the perpetrator if we report him. Just because we’re experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police. </p>
+<p class="text-justify">Another very important thing is that we're afraid of what will happen to the perpetrator if we report him. Just because we're experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police. </p>
 
 <h3>We understand the day-to-day needs of African heritage women</h3>
-<p class="text-justify">When a black woman washes her hair, it not usually a 10 minute 'wash and go' process that you might find with more manageable European or Asian hair types. Generally speaking, our natural hair texture means that it takes an extended time to wash and dry. If it is unprocessed, our hair will shrink and revert and will have to be plaited, combed or otherwise styled before we can go out. If it’s processed or weave, it still has to undergo some type of process before we can 'present'. The wash plait and style process can take hours and usually takes careful planning. </p>
+<p class="text-justify">When a black woman washes her hair, it not usually a 10 minute 'wash and go' process that you might find with more manageable European or Asian hair types. Generally speaking, our natural hair texture means that it takes an extended time to wash and dry. If it is unprocessed, our hair will shrink and revert and will have to be plaited, combed or otherwise styled before we can go out. If it's processed or weave, it still has to undergo some type of process before we can 'present'. The wash plait and style process can take hours and usually takes careful planning. </p>
 
-<p class="text-justify">Our skin also takes special treatment and care. After bathing, we must apply special creams or oils to our skins to avoid the dry and 'ashy’ appearance. These are day-to- day routines for us, but most people outside our culture don't appear to know this.</p>
+<p class="text-justify">Our skin also takes special treatment and care. After bathing, we must apply special creams or oils to our skins to avoid the dry and 'ashy' appearance. These are day-to- day routines for us, but most people outside our culture don't appear to know this.</p>
 
 <p class="text-justify">What has this to do with domestic abuse? Well, plenty. If you don't know this basic fact about African heritage woman, what do you know? How can you cater for us when you don't know the first thing about us?</p>
 
-<p class="text-justify">How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge. Where she has not had time to go through the routine that allows her to be presentable and doesn’t have access to the products and items she needs to manage her hair and skin. Where the very nice people at the refuge/centre/police station/rape centre/hospital don't understand why she can't present yet. </p>
+<p class="text-justify">How do you think this would impact on an African heritage woman who has been moved suddenly to a refuge. Where she has not had time to go through the routine that allows her to be presentable and doesn't have access to the products and items she needs to manage her hair and skin. Where the very nice people at the refuge/centre/police station/rape centre/hospital don't understand why she can't present yet. </p>
 
 <p class="text-justify"> This is additional trauma on top of what happened to her.</p>
 
@@ -115,7 +119,7 @@
 <h1>The history</h1>
 <p class="text-justify">Many UK born or raised African heritage people grew up in time when only white men were teachers, head teachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. All high profile jobs were predominantly done by white men. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.</p>
 
-<p class="text-justify">The well-known phrase, ‘No blacks, No Irish, No dogs’ was in many windows in 1950/60s Britain. Many of the children of that time are now adults and although much has changed in terms of work opportunities, equality for all has not been achieved.</p>
+<p class="text-justify">The well-known phrase, 'No blacks, No Irish, No dogs' was in many windows in 1950/60s Britain. Many of the children of that time are now adults and although much has changed in terms of work opportunities, equality for all has not been achieved.</p>
 
 <p class="text-justify">Back then, in addition to this, there was not much support for any person suffering domestic abuse. It was very much considered a 'domestic' affair to be sorted out by the people involved. This did not bode well for women in particular, African heritage women even less so.</p>
 
