--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -85,7 +85,8 @@
 
 <p class="text-justify">This is no doubt hard for some people to read, understand or believe. Unfortunately, it does not make it any less true. If it's difficult for you to hear, imagine how difficult it is to live it. </p>
 <h2>Our solution</h2>
-<p class="text-justify"> To create our own Sistah Space, a place where African heritage people can see themselves reflected. Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than their white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
+<hp> To create our own Sistah Space, a place where African heritage people can see themselves reflected. </p>
+<p class="text-justify">  Nobody can understand the needs of African heritage women, better than African heritage women do. Only we understand that black women have to report domestic abuse many more times than their white counterparts, before (if ever) getting help. Only we truly know the journey and prejudices and racism we have endured over the years that make it extremely difficult to go to others for help. </p>
 
 
 
