--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -81,7 +81,7 @@
 
 
 <h2> Why is this needed?</h2>
-<p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without an understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
+<p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
 
 <p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
 
@@ -95,11 +95,9 @@
 
 <h2>Why Sistah Space is best placed to do this</h2>
 
-<p class="text-justify">Ngozi gives this example to those who do not understand why a specialist organisation like Sistah Space is needed. </p>
-
-<p class="text-justify"> "I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family." </p>
-
-<p class="text-justify">Another very important thing is that we're afraid of what will happen to the perpetrator if we report him. Just because we're experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police. </p>
+<p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. Ngozi Headley-Fulani (founder) uses this example to explain why this is so important.</p>
+<p class="text-justify">"I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family. </p>
+<p class="text-justify">"We're afraid of what will happen to the perpetrator if we report him. Just because we're experiencing turbulence in the relationship, it doesn't mean we want him hurt, or dead. We only want the abuse to stop. The history of black men and the police is not a good one. We fear reporting our brotha to the police." </p>
 
 
 <h3>We understand the day-to-day needs of African heritage women</h3>
