--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -67,20 +67,17 @@
 
 
 
+  <div class = "container">
 
-<div class = "container">
-<div class ="jumbotron">
-	<img sr="../images/1.JPG">
+        <div class="jumbotron">
+          <h2> A domestic abuse organisation for African heritage people</h2>
+          <h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple. The current system does not understand or cater for the needs of this community. </h4>
+
 </div>
 
 
-<div class="standout">
-<h1> A domestic abuse organisation for African heritage people</h1>
-<h4 class="text-justify"> You may ask why we need a domestic abuse organisation specfically for African heritage people. The answer is simple. The current system does not understand or cater for the needs of this community. </h4>
-</div>
 
-
-<h2> Why is this needed?</h2>
+<h2 color: #E3E166> Why is this needed?</h2>
 <p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
 
 <p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
