--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -76,8 +76,8 @@
 </div>
 
 
-
-<h2 color: #E3E166> Why is this needed?</h2>
+<div class="main-copy">
+<h2> Why is this needed?</h2>
 <p class="text-justify">There are many UK domestic abuse/violence organisations, but our experience has shown that without understanding and respect for the history, culture and specific needs of African and Caribbean survivors of domestic abuse it is not possible to provide the help and support that's needed.</p>
 
 <p class="text-justify"> We know many women have had negative experiences when trying to get help. We know women who have felt humiliated. We know women who have felt that the police aren't taking them seriously because they don't have a 'red mark' on their dark skin when they were hit in the face.</p>
@@ -138,7 +138,7 @@
 </p>
 
 
-
+</div>
 </div>
 </div>
 </body>
